--- a/examples/webgl_buffergeometry_rawshader.html
+++ b/examples/webgl_buffergeometry_rawshader.html
@@ -100,9 +100,9 @@
 				for ( let i = 0; i < vertexCount; i ++ ) {
 
 					// adding x,y,z
-					positions.push( Math.random() - 0.5 );
-					positions.push( Math.random() - 0.5 );
-					positions.push( Math.random() - 0.5 );
+					positions.push(1);
+					positions.push(1);
+					positions.push(1);
 
 					// adding r,g,b,a
 					colors.push( Math.random() * 255 );
